@@ -1,7 +1,8 @@
 owncloud-news (1.601)
 * Remove Google Reader import
 * Replace Google Reader import with export and import of unread and starred articles
-* Set default autoPurgeLimit to 5000. People who update will have to adjust this if they want to
+* Autopurge limit is now added to the number of articles each feed gets when it updates
+* Fix CORS headers for OPTIONS request deeper than one level
 
 owncloud-news (1.404)
 * Fix bug on postgres databases that would not delete old articles
